--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,66 +19,18 @@ set(VCPKG_TOOL_PATH "${VCPKG_INSTALLED_DIR}/x64-windows/tools")
 endif()
 message("VCPKG 工具路径 ${VCPKG_TOOL_PATH}")
 
-find_package(Boost COMPONENTS system CONFIG REQUIRED)  # 显式指定组件
-find_package(Protobuf CONFIG REQUIRED)#protobuf 引入
-find_package(gRpc CONFIG REQUIRED)
-message(STATUS "Protoc 路径: ${PROTOBUF_PROTOC_EXECUTABLE}")
-
 # proto文件处理 #
-set(PROTO_PATH "Protos")
+set(PROTO_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Protos")
 file(GLOB PROTO_MESSAGES ${PROTO_PATH}/*.proto)
 message("项目proto文件：${PROTO_MESSAGES}")
-
-set(PROTO_OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Protos/out")
-file(MAKE_DIRECTORY ${PROTO_OUT_DIR})
-
-# 根据平台判断插件扩展名[1,5](@ref)
-if(WIN32)
-    set(GRPC_PLUGIN_SUFFIX ".exe")
-else()
-    set(GRPC_PLUGIN_SUFFIX "")
-endif()
-
-
-FOREACH(cur_proto ${PROTO_MESSAGES})
-
- get_filename_component(proto_name ${cur_proto} NAME_WE)
-    
-    # 定义生成文件路径
-    #set(pb_src "${PROTO_OUT_DIR}/${proto_name}.pb.cc")
-    #set(pb_hdr "${PROTO_OUT_DIR}/${proto_name}.pb.h")
-    #set(grpc_src "${PROTO_OUT_DIR}/${proto_name}.grpc.pb.cc")
-    #set(grpc_hdr "${PROTO_OUT_DIR}/${proto_name}.grpc.pb.h")
-    message("执行编译文件 ${cur_proto} 目标 ${pb_src}")
-    message("编译proto: ${PROTOBUF_PROTOC_EXECUTABLE} -I=${CMAKE_CURRENT_SOURCE_DIR}/Protos --cpp_out=${PROTO_OUT_DIR} ${proto_name}.proto")
-    # 生成Protobuf基础代码
-    EXECUTE_PROCESS(
-       # OUTPUT ${pb_src} ${pb_hdr}
-        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} -I=${CMAKE_CURRENT_SOURCE_DIR}/Protos --cpp_out=${PROTO_OUT_DIR} ${proto_name}.proto
-        #DEPENDS ${cur_proto}
-        #COMMENT "Generating Protobuf code for ${proto_name}"
-    )
-
-    # 生成gRPC代码
-    EXECUTE_PROCESS(
-       # OUTPUT ${grpc_src} ${grpc_hdr}
-        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE}
-        ARGS --proto_path=${PROTO_PATH}
-            --grpc_out=${PROTO_OUT_DIR}
-            --plugin=protoc-gen-grpc="${VCPKG_TOOL_PATH}/grpc/grpc_cpp_plugin${GRPC_PLUGIN_SUFFIX}"
-            ${cur_proto}
-        DEPENDS ${cur_proto} #DEPENDS 部分的作用是 ​定义触发该自定义命令重新执行的依赖项
-            "${VCPKG_TOOL_PATH}/grpc/grpc_cpp_plugin${GRPC_PLUGIN_SUFFIX}"
-        COMMENT "Generating gRPC code for ${proto_name}"
-    )
-
-    # 收集生成文件
-    #list(APPEND GENERATED_SOURCES ${pb_src} ${grpc_src})
-    #list(APPEND GENERATED_HEADERS ${pb_hdr} ${grpc_hdr})
-ENDFOREACH()
+set(PROTO_OUT_DIR "${PROTO_PATH}/out")
 
 #jsoncpp
 set(JSONCPP_ROOT "${JSONCPP_HEADER}/..")
+
+find_package(Boost COMPONENTS system filesystem CONFIG REQUIRED)  # 显式指定组件
+find_package(Protobuf CONFIG REQUIRED)#protobuf 引入
+find_package(gRpc CONFIG REQUIRED)
 
 if(WIN32)
 set(JSONCPP_DLL_PATH "${JSONCPP_ROOT}/bin/jsoncpp.dll")
@@ -86,14 +38,15 @@ set(JSONLIB_PATH "${JSONCPP_ROOT}/lib/jsoncpp.lib")
 endif()
 
 # 将各dll拷贝至构建目录的函数
-function(COPY_DLLS target_name dll_list)
-    foreach(dll IN LISTS ${dll_list})
+function(COPY_FILES target_name Files_list)
+    foreach(file IN LISTS ${Files_list})
         add_custom_command(TARGET ${target_name} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "${dll}"
+                "${file}"
                 $<TARGET_FILE_DIR:${target_name}>
-            COMMENT "Copying DLL: ${dll}"
+            COMMENT "Copying DLL: ${file}"
         )
+        message("项目：${target_name}拷贝文件：${file} 拷贝至 $<TARGET_FILE_DIR:${target_name}")
     endforeach()
 endfunction()
 
@@ -104,8 +57,6 @@ include_directories(
     ./Protos/out
 )
 
-#填写子项目名
-set(GateServerProName "GateServer")
-
 # 包含子项目。
+add_subdirectory (./Protos)
 add_subdirectory (./GateServer)
