--- a/VarifyServer/config.json
+++ b/VarifyServer/config.json
@@ -2,5 +2,10 @@
     "email": {
       "user": "gosei_chen@qq.com",
       "pass": "aqzahmrlaztydfcb"
+    },
+	"redis":{
+      "host": "127.0.0.1",
+      "port": "6379",
+      "passwd": "123456"
     }
 }
