--- a/VarifyServer/package.json
+++ b/VarifyServer/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.13",
+    "ioredis": "^5.6.0",
     "nodemailer": "^6.10.0",
     "uuid": "^11.1.0"
   }
