--- a/TestPro/CMakeLists.txt
+++ b/TestPro/CMakeLists.txt
@@ -5,11 +5,12 @@ set(CMAKE_CXX_STANDARD 20)
 
 #依赖common下的cpp
 file(GLOB COMMON_FILES
+	"${COMMON_PATH}/ThreadWorkerTemplate.h"
 	"${COMMON_PATH}/MysqlDAO.cpp"
 	"${COMMON_PATH}/ConfigMgr.cpp"
 	"${COMMON_PATH}/RedisMgr.cpp"
-	"${COMMON_PATH}/ThreadWorkerTemplate.h"
 )
+
 message("通用类文件夹： ${COMMON_PATH}")
 
 #依赖的proto文件
@@ -29,24 +30,30 @@ add_executable (${PROJECT_NAME}
 )
 
 #头文件
-target_include_directories(${PROJECT_NAME} PRIVATE ./Include)
+target_include_directories(${PROJECT_NAME} PRIVATE 
+	./Include
+)
 
 #库文件
 target_link_libraries(${PROJECT_NAME} PRIVATE 
 	#${JSONLIB_PATH}
 	#gRPC::grpc++
 	#gRPC::grpc++_reflection
-	#protobuf::libprotobuf
+	protobuf::libprotobuf
 	Boost::system
 	#Boost::filesystem
+	mysql::concpp
+	mysql::concpp-jdbc
 	redis++::redis++
 	hiredis::hiredis
-	mysql::concpp
+
 )
 
 file(GLOB CopyTargets
 	#${JSONCPP_DLL_PATH}
 	"config.ini"
+	${mysql-concpp_ROOT}/lib64/mysqlcppconn-10-vs14.dll
+	${mysql-concpp_ROOT}/lib64/mysqlcppconnx-2-vs14.dll
 )
 
 
