--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -8,7 +8,8 @@ Host = 127.0.0.1
 Port = 6379
 Passwd = 123456
 [Mysql]
+User = root
 Host = 127.0.0.1
 Port = 3306
-Passwd = 123456
-User = root
+Passwd = 54289
+Schema = IMData
