聊天状态服务器基础搭建

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,4 @@ include_directories(
 add_subdirectory (./Protos)
 add_subdirectory (./GateServer)
 add_subdirectory (./TestPro)
+add_subdirectory("StatusServer")
