--- a/StatusServer/CMakeLists.txt
+++ b/StatusServer/CMakeLists.txt
@@ -1,15 +1,14 @@
 ﻿cmake_minimum_required (VERSION 3.20)
-
-project (GateServer LANGUAGES CXX )
+project (StatuServer LANGUAGES CXX )
 set(CMAKE_CXX_STANDARD 20)
-message("GateServer项目 PROJECT_NAME: ${PROJECT_NAME} ")
+
 
 #依赖common下的cpp
 file(GLOB COMMON_FILES
 	"${COMMON_PATH}/ConfigMgr.cpp"
 	"${COMMON_PATH}/AsioIOServicePool.cpp"
-	"${COMMON_PATH}/RedisMgr.cpp"
-	"${COMMON_PATH}/MysqlDAO.cpp"
+	#"${COMMON_PATH}/RedisMgr.cpp"
+	#"${COMMON_PATH}/MysqlDAO.cpp"
 	"${COMMON_PATH}/ThreadWorkerTemplate.h"
 	"${COMMON_PATH}/PubFuncLib.cpp"
 	"${COMMON_PATH}/const.h"
@@ -17,18 +16,16 @@ file(GLOB COMMON_FILES
 
 #依赖的proto文件
 file(GLOB PROTO_FILES
-	"${PROTO_OUT_DIR}/message.pb.cc"
-	"${PROTO_OUT_DIR}/message.grpc.pb.cc"
 	"${PROTO_OUT_DIR}/StatusService.pb.cc"
 	"${PROTO_OUT_DIR}/StatusService.grpc.pb.cc"
 )
 
-aux_source_directory(./Src GateServerSrc)
-file(GLOB GateServerHed "./Include/*.h" )
+aux_source_directory(./Src StatuServerSrc)
+file(GLOB StatuServerHed "./Include/*.h" )
 
 add_executable (${PROJECT_NAME} 
-	${GateServerHed}
-	${GateServerSrc}
+	${StatuServerHed}
+	${StatuServerSrc}
 	${COMMON_FILES}
 	${PROTO_FILES}
 )
@@ -41,13 +38,15 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 	${JSONLIB_PATH}
 	gRPC::grpc++
 	gRPC::grpc++_reflection
+	protobuf::libprotobuf
 	Boost::system
 	Boost::filesystem
-	redis++::redis++
-	hiredis::hiredis
-	mysql::concpp
-	mysql::concpp-jdbc
-	protobuf::libprotobuf
+
+	#redis++::redis++
+	#hiredis::hiredis
+	#mysql::concpp
+	#mysql::concpp-jdbc
+
 )
 
 file(GLOB CopyTargets
@@ -57,4 +56,4 @@ file(GLOB CopyTargets
 )
 
 
-COPY_FILES(${PROJECT_NAME} CopyTargets)  #拷贝该项目需要的dll
+COPY_FILES(${PROJECT_NAME} CopyTargets)
