--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -1,11 +1,6 @@
-[GateServer]
-Port = 9527
-[VarifyServer]
-Host = 127.0.0.1
-Port = 50051
 [StatusServer]
-Host = 127.0.0.1
 Port = 50052
+Host = 0.0.0.0
 [Redis]
 Host = 127.0.0.1
 Port = 6379
@@ -16,3 +11,9 @@ Host = 127.0.0.1
 Port = 3306
 Passwd = 54289
 Schema = IMData
+[ChatServer1]
+Host = 127.0.0.1
+Port = 8090
+[ChatServer2]
+Host = 127.0.0.1
+Port = 8091
