登录会话框架基本完成 1.会话接受解析客户端的UID和token失败，可以留意通知会话的服务器或者会话本身是否解析正确

--- a/ChatServer/CMakeLists.txt
+++ b/ChatServer/CMakeLists.txt
@@ -8,10 +8,11 @@ file(GLOB COMMON_FILES
 	"${COMMON_PATH}/ConfigMgr.cpp"
 	"${COMMON_PATH}/AsioIOServicePool.cpp"
 	#"${COMMON_PATH}/RedisMgr.cpp"
-	#"${COMMON_PATH}/MysqlDAO.cpp"
+	"${COMMON_PATH}/MysqlDAO.cpp"
 	"${COMMON_PATH}/ThreadWorkerTemplate.h"
 	"${COMMON_PATH}/PubFuncLib.cpp"
 	"${COMMON_PATH}/const.h"
+	"${COMMON_PATH}/StatusGrpcClient.cpp"
 )
 
 #依赖的proto文件
@@ -41,18 +42,18 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 	protobuf::libprotobuf
 	Boost::system
 	Boost::filesystem
-
+	mysql::concpp
+	mysql::concpp-jdbc
 	#redis++::redis++
 	#hiredis::hiredis
-	#mysql::concpp
-	#mysql::concpp-jdbc
+
 
 )
 
 file(GLOB CopyTargets
 	${JSONCPP_DLL_PATH}
 	"config.ini"
-	#${MySQL_DLLS}
+	${MySQL_DLLS}
 )
 
 
