--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -12,8 +12,10 @@ Port = 3306
 Passwd = 54289
 Schema = IMData
 [ChatServer1]
+Name = chatserver1
 Host = 127.0.0.1
 Port = 8090
 [ChatServer2]
+Name = chatserver2
 Host = 127.0.0.1
 Port = 8091
