完成好友认证阶段

--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -11,11 +11,13 @@ Host = 127.0.0.1
 Port = 3306
 Passwd = 54289
 Schema = IMData
+[ChatServers]
+Name=ChatServer1,ChatServer2
 [ChatServer1]
-Name = chatserver1
+Name = ChatServer1
 Host = 127.0.0.1
 Port = 8090
 [ChatServer2]
-Name = chatserver2
+Name = ChatServer2
 Host = 127.0.0.1
 Port = 8091
